src/objects/mkto_si__Marketo_Sales_Insight_Config__c.object
<CustomObject>
    <fields>
        <fullName>mkto_si__API_Secret_Key__c</fullName>
        <label>API Secret Key</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__API_URL__c</fullName>
        <label>API URL</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mkto_si__API_User_Id__c</fullName>
        <description>The username for accessing the Marketo API.</description>
        <label>API User Id</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Enable_Marketo_API__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to enable the Marketo API. You will be required to enter values for the API User Id and API Key.</description>
        <label>Enable Marketo API</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Enable_RSS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the RSS icon above the Lead Feed. Note that the RSS feed must be enabled or disabled separately in Marketo.</description>
        <label>Show RSS Icon</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mkto_si__Marketo_Host__c</fullName>
        <label>Marketo Host</label>
        <required>true</required>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mkto_si__Test_Configuration__c</fullName>
        <formula>HYPERLINK(&quot;/apex/mkto_si__ConfigTest&quot;, &quot;Start Test&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Configuration</label>
        <type>Text</type>
    </fields>
    <label>Marketo Sales Insight Config</label>
    <listViews>
        <fullName>mkto_si__All</fullName>
        <columns>mkto_si__Enable_Marketo_API__c</columns>
        <columns>mkto_si__API_User_Id__c</columns>
        <columns>mkto_si__API_Secret_Key__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>mkto_si__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MarketoAPI{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketo Sales Insight Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>